--- a/html/alphabet.html
+++ b/html/alphabet.html
@@ -56,21 +56,17 @@
                         <tr> <!--20번까지-->
                             <td>01</td>
                             <td>&lt;a&gt;</td>
-                            <td>&lt;a&gt;는 다른 페이지 이동을 설정합니다.</td>
-                            <td><a href="#">클릭</a></td>
+                            <td>&lt;a&gt;</td>
+                            <td><a href="#">__</a></td>
                             <td>
-                                <span class="material-symbols-outlined">star</span>
-                                <span class="material-symbols-outlined">star</span>
-                                <span class="material-symbols-outlined">star</span>
-                                <span class="material-symbols-outlined">star</span>
-                                <span class="material-symbols-outlined">star</span>
+                            
                             </td>
                             <td></td>
                         </tr>
                         <tr>
                             <td>02</td>
                             <td>&lt;abbr&gt;</td>
-                            <td>&lt;abbr&gt; 태그는 줄임말이나 머리글자를 표현하는데 사용합니다.</td>
+                            <td>&lt;abbr&gt;</td>
                             <td><a href="#">__</a></td>
                             <td></td>
                             <td></td>
@@ -78,14 +74,9 @@
                         <tr>
                             <td>03</td>
                             <td>&lt;acronym&gt;</td>
-                            <td>&lt;acronym&gt; 태그는 줄임말이나 머리글자를 표현하는데 사용합니다.</td>
+                            <td>&lt;acronym&gt;</td>
                             <td><a href="#">__</a></td>
                             <td>
-                                <span class="material-symbols-outlined">star</span>
-                                <span class="material-symbols-outlined">star</span>
-                                <span class="material-symbols-outlined">star</span>
-                                <span class="material-symbols-outlined">star</span>
-                                <span class="material-symbols-outlined">star</span>
                             </td>
                             <td><span class="material-symbols-outlined" title="현재는 사용하지 않습니다.">delete</span></td>
                         </tr>
@@ -93,7 +84,7 @@
                             <td>04</td>
                             <td>&lt;address&gt;</td>
                             <td>&lt;address&gt;</td>
-                            <td>&lt;address&gt;은 가까운 HTML 요소의 사람, 단체, 조직 등에 대한 연락처 정보를 나타냅니다.<a href="#">__</a></td>
+                            <td><a href="#">__</a></td>
                             <td></td>
                             <td></td>
                         </tr>
@@ -101,7 +92,7 @@
                             <td>05</td>
                             <td>&lt;applet&gt;</td>
                             <td>&lt;applet&gt;</td>
-                            <td>&lt;applet&gt;<a href="#">__</a></td>
+                            <td><a href="#">__</a></td>
                             <td></td>
                             <td><span class="material-symbols-outlined" title="현재는 사용하지 않습니다.">delete</span></td>
                         </tr>
