--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="brand" href="index.html">web's</a>
+        <a class="brand" href="index.html">김상준</a>
         <div class="nav-collapse collapse pull-right">
           <ul class="nav">
-            <li><a href="https://esol-studio.tistory.com">Blog</a></li>
+            <li><a href="https://kimsangjun.tistory.com/">Blog</a></li>
             <li><a href="https://codepen.io/kimsangjunv1">Codepen</a></li>
             <li><a href="https://github.com/kimsangjunv1">Github</a></li>
           </ul>
