--- a/html/study/basic.html
+++ b/html/study/basic.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>자바스크립트 : 기본규칙</title>
-    <link rel="stylesheet" href="../asset/css/style.css">
-    <link rel="stylesheet" href="../asset/css/dracula.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/dracula.css">
 </head>
 <body>
     <header id="header">
@@ -30,9 +30,7 @@
             <ul class="study">
                 <li class="active"><a href="basic.html">기본 규칙</a></li>
                 <li><a href="operator.html">연산자</a></li>
-                <li><a href="for.html">반복문</a></li>
-                <li><a href="if.html">조건문</a></li>
-                <li><a href="type.html">데이터 타입</a></li>
+                <li><a href="for.html">for문</a></li>
             </ul>
         </nav>
     </header>
@@ -49,7 +47,7 @@
 
             <h3 class="t_tit2">자바스크립트란?</h3><!--블록-->
             <p class="t_desc2"> <!--핵심은 t_desc2-->
-                JavaScript는 웹 페이지에서 복잡한 기능을 구현할 수 있도록 하는 스크립트 언어 또는 <i>프로그래밍 언어</i> 입니다.<br>
+                JavaScript는 웹 페이지에서 복잡한 기능을 구현할 수 있도록 하는 스크립트 언어 또는 프로그래밍 언어 입니다.<br>
                 HTML은 정적인 레이아웃을 표현한다면, 자바스크립트는 동적인 기능을 표현합니다.
             </p>
 
@@ -78,7 +76,7 @@
 
             <h4 class="t_tit3">3. 들여쓰기</h4>
             <p class="t_desc">
-                자바스크립트 가독성을 위하여 <i>들여쓰기를 사용합니다.</i>
+                자바스크립트 가독성을 위하여 들여쓰기를 사용합니다.
             </p>
 
             <h4 class="t_tit3">4. 주석</h4>
@@ -155,7 +153,7 @@
         <a href="mailto:webstoryboy@naver.com">webstoryboy@naver.com</a>
     </footer>
     <!-- //footer -->
-    <script src="../asset/js/highlight.min.js"></script>
+    <script src="../assets/js/highlight.min.js"></script>
     <script>
         hljs.highlightAll();
     </script>
