--- a/javascript/css.html
+++ b/javascript/css.html
@@ -28,8 +28,10 @@
                 <li><a href="#">이벤트 객체</a></li>
             </ul>
             <ul class="study">
-                <li><a href="#">기본 규칙</a></li>
-                <li><a href="#">기본 명령어</a></li>
+                <li><a href="study/basic.html">기본 규칙</a></li>
+                <li><a href="study/operator.html">연산자</a></li>
+                <li><a href="study/for.html">반복문</a></li>
+                <li><a href="study/if.html">조건문</a></li>
             </ul>
         </nav>
     </header>
