--- a/javascript/study/test.html
+++ b/javascript/study/test.html
@@ -1,51 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
-    <style>
-        table{
-            width: 100%;
-            border: 1px solid #000;
-        }
-
-        table td{
-            border: 1px solid #000;
-        }
-    </style>
-</head>
-<body>
-    <!-- <table>
-        <tr>
-            <td>1</td>
-            <td>2</td>
-            <td>3</td>
-            <td>4</td>
-            <td>5</td>
-            <td>6</td>
-            <td>7</td>
-            <td>8</td>
-            <td>9</td>
-            <td>10</td>
-        </tr>
-    </table> -->
-    <script>
-        let table = "<table>";
-            
-            for (let i=0; i<10; i++){
-                table += "<tr>";
-                for(let j=0; j<10; j++){
-                    table += "<td>1</td>";
-                }
-                table += "</tr>"
-            }
-
-            table += "</table>"
-
-        document.write(table);
-    </script>
-</body>
-</html>
+<script>
+    {
+        var classification = prompt('아동, 청소년, 성인 중 선택 입력', '');
+switch(classification){
+    case '아동':
+        classification += ' : 입장료 무료';
+        break;
+    case '청소년':
+        classification += ' : 입장료 2,000원';
+        break;
+    case '성인':
+        classification += ' : 입장료 5,000원';
+        break;
+    default:
+        classification += '입력 값을 다시 확인하세요';
+}
+document.write(classification);
+}
+</script>
