--- a/javascript/study/basic.html
+++ b/javascript/study/basic.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>자바스크립트 : 기본규칙</title>
-    <link rel="stylesheet" href="../asset/css/style.css">
-    <link rel="stylesheet" href="../asset/css/dracula.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/dracula.css">
 </head>
 <body>
     <header id="header">
@@ -33,6 +33,7 @@
                 <li><a href="for.html">반복문</a></li>
                 <li><a href="if.html">조건문</a></li>
                 <li><a href="type.html">데이터 타입</a></li>
+                <li><a href="function.html">함수</a></li>
             </ul>
         </nav>
     </header>
@@ -41,8 +42,7 @@
         <div class="document">
             <h2 class="t_tit">기본 규칙</h2><!--블록-->
             <p class="t_desc"><!--블록-->
-                자바스크립트를 다루기 위해서는 기초적인 특징과 기본 문법이 있습니다.
-                가장 기본이기 때문에 이 부분을 숙지하고 자바스크립트를 <i>공부</i>하세요!
+                자바스크립트를 다루기 위해서는 기본 문법과 특징이 있으니 해당 사항들을 위주로 학습해야합니다.
             </p>
 
             <hr>
@@ -123,9 +123,9 @@
             <hr>
             <h3 class="t_tit2">자바스크립트 사용 방법</h3>
             <p class="t_desc">
-                자바스크립트의 사용방법은
-                1. 외부파일 연결하는 방법
-                2. 스크립트 태그 사용하는 방법
+                자바스크립트의 사용방법은<br>
+                1. 외부파일 연결하는 방법<br>
+                2. 스크립트 태그 사용하는 방법<br>
                 3. 태그에 직접 기술하는 방법 등이 있습니다.
             </p>
             <div class="t_code">
@@ -155,7 +155,7 @@
         <a href="mailto:webstoryboy@naver.com">webstoryboy@naver.com</a>
     </footer>
     <!-- //footer -->
-    <script src="../asset/js/highlight.min.js"></script>
+    <script src="../assets/js/highlight.min.js"></script>
     <script>
         hljs.highlightAll();
     </script>
