--- a/javascript/study/operator.html
+++ b/javascript/study/operator.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>자바스크립트 : 연산자</title>
-    <link rel="stylesheet" href="../asset/css/style.css">
-    <link rel="stylesheet" href="../asset/css/dracula.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/dracula.css">
 </head>
 <body>
     <header id="header">
@@ -33,6 +33,7 @@
                 <li><a href="for.html">반복문</a></li>
                 <li><a href="if.html">조건문</a></li>
                 <li><a href="type.html">데이터 타입</a></li>
+                <li><a href="function.html">함수</a></li>
             </ul>
         </nav>
     </header>
@@ -40,9 +41,9 @@
     <main id="main">
         <div class="document">
             <h2 class="t_tit">자바스크립트 연산자</h2>
-            <p class="t_box">
+            <p class="t_desc">
                 프로그램에 필요한 수식을 만들 때 필요한 것이 연산자이며,
-                자바스크립트에서 연산자에는 산술연산자, 대입연산자, 논리연산자 등이 있다.
+                자바스크립트에서 연산자에는 <i>산술연산자, 대입연산자, 논리연산자</i> 등이 있다.
             </p>
 
             <hr><!--선-->
@@ -212,7 +213,7 @@
         <a href="mailto:webstoryboy@naver.com">webstoryboy@naver.com</a>
     </footer>
     <!-- //footer -->
-    <script src="../asset/js/highlight.min.js"></script>
+    <script src="../assets/js/highlight.min.js"></script>
     <script>
         hljs.highlightAll();
     </script>
