--- a/javascript/javascript02.html
+++ b/javascript/javascript02.html
@@ -221,7 +221,7 @@
                     <details>
                         <summary>결과보기</summary>
                         <div class="sample05_result">
-
+                            3
                         </div>
                     </details>
                     <!-- 결과보기 끝 -->
@@ -473,11 +473,69 @@
         <a href="mailto:webstoryboy@naver.com">webstoryboy@naver.com</a>
     </footer>
     <!-- //footer -->
-    <script src="asset/js/highlight.min.js"></script><!-- 1. 스크립트 가져옴 (다음줄) -->
+    <script src="assets/js/highlight.min.js"></script><!-- 1. 스크립트 가져옴 (다음줄) -->
     <script>hljs.highlightAll();</script><!-- 2. 스크립트 실행 (살짝 위로) -->
 
     <!-- 데이터 -->
     <script>
+        //01. 변수
+        {
+            const a = 100;
+            const b = 200;
+            const c = "javascript"
+
+            const obj = {a, b, c}
+
+            // document.write(obj.a); //객체 안 개체 키 a 출력 : 100
+            // document.write(obj.b); //객체 안 개체 키 b 출력 : 200
+            // document.write(obj.c); //객체 안 개체 키 c 출력 : javascript
+
+            document.querySelector(".sample01_result").innerHTML=obj.a+"<br>"+obj.b+"<br>"+obj.c
+        }
+        //02. 상수
+        {
+            const x = 100, 
+            y = 200,
+            z = "javascript" //상수 x에 100, y에 200, z에 javascript
+
+            // document.write(x)       //x의 값 100 출력
+            // document.write(y)       //y의 값 200 출력
+            // document.write(z)       //z의 값 javascript 출력
+
+            document.querySelector(".sample02_result").innerHTML=x+"<br>"+y+"<br>"+z
+        }
+
+        //03. 배열
+        {
+            const arr = [100, 200, "javascript"];       //배열 arr에 100, 200, javascript 대입
+
+            document.write(arr[0]);     //배열 arr 첫번째 값 100 출력
+            document.write(arr[1]);     //배열 arr 두번째 값 200 출력
+            document.write(arr[2]);     //배열 arr 세번째 값 javascript 출력
+
+            document.querySelector(".sample03_result").innerHTML=arr[0]+"<br>"+arr[1]+"<br>"+arr[2]
+
+        }
+
+        //04. 배열 (2차배열)
+        {
+            const arr = [100, 200, ["javascript","jquery"]]     //arr 배열에 100,200,세번째 자리에 배열 삽입 후 javascript,jquery 삽입
+
+            // document.write(arr[0]);       //arr 배열 첫번째에 100 대입
+            // document.write(arr[1]);       //arr 배열 두번째에 200 대입
+            // document.write(arr[2][0]);       //arr에 배열 세번째의 배열에 첫번째 배열에 javascript 대입
+            // document.write(arr[2][1]);       //arr에 배열 세번째의 배열에 첫번째 배열에 jquery 대입
+            
+            document.querySelector(".sample04_result").innerHTML=arr[0]+"<br>"+arr[1]+"<br>"+arr[2][0]+"<br>"+arr[2][1]
+        }
+
+        //05. 배열 : 갯수 구하기
+        {
+            const arr = [100, 200, "javascript"]; // 배열 arr에 100, 200, javascript 대입
+            // document.write(arr.length) // 배열의 개수 : property의 경우 정해져있어서 () 안씀
+
+            document.querySelector(".sample04_result").innerHTML=arr.length
+        }
         //06. for문
         {
             // const arr = [100, 200, 300, 400, 500];
