--- a/html/block_inline.html
+++ b/html/block_inline.html
@@ -109,6 +109,12 @@
             background-color: #ffffff;
             padding: 10px;
         }
+        .document hr{
+            border: 0;
+            border-top: 1px dashed #dcdcdc;
+            margin-top: 45px;
+            margin-bottom: 45px;
+        }
         /* 미디어 쿼리 */
         @media (max-width: 800px){
             #header{
@@ -150,12 +156,16 @@
             </ul>
         </nav>
         <article class="article">
-            <!-- 시멘틱 마크업 -->
-            <h2>01. 블록 레벨 요소</h2>
-            <p>
-                블록 레벨 요소는 마크업을 할 때 줄이 바뀌는 특성을 지니고 있음.
-            </p>
-            <pre ><code class="language-js">{
+            <div class="document">
+                <!-- 시멘틱 마크업 -->
+                <h2 class="t_tit">블록/인라인</h2>
+                <p class="t_desc2_html">HTML에 존재하는 모든 요소는 어떻게 보일지 각 display를 지니게 되어있는데 , <i>블록</i>과 <i>인라인</i> 두가지로 정해진다.</p>
+                <hr>
+                <h2 class="t_tit2">01. 블록 요소</h2>
+                <p class="t_desc2_html">블록 요소는 한 라인을 모두 차지하는 속성을 지니고 있습니다.</p>
+                
+                <div class="t_code">
+<pre ><code class="language-js">{
     &lt;!DOCTYPE html&gt;
     &lt;html lang="ko"&gt;
             lt;head&gt;
@@ -170,13 +180,15 @@
         &lt;/body&gt;
     &lt;/html&gt;
 }
-            </code></pre>
-            <p>&lt;h1&gt;,&lt;h2&gt;,&lt;p&gt; 요소들은 블록의 성질을 지니고 있어 화면상 줄 바꿈 현상이 일어남</p>
-            <h2>02. 인라인 요소</h2>
-            <p>
-                인라인 요소는 블록 레벨 요소와 달리 줄 바꿈 특성이 없으며 행이 바뀌지 않고 한줄 출력임.
-            </p>
-            <pre ><code class="language-js">{
+</code></pre>
+                </div>
+                
+                <p class="t_box">&lt;h1&gt;,&lt;h2&gt;,&lt;p&gt; 요소들은 블록의 성질을 지니고 있어 화면상 줄 바꿈 현상이 일어남</p>
+                <h2 class="t_tit2">02. 인라인 요소</h2>
+                <p class="t_desc2_html">인라인 요소는 블록 레벨 요소와 달리 줄 바꿈 특성이 없고 행이 바뀌지 않고 한줄 출력을 하며,
+                    요소의 너비도 해당 라인의 전체가 아닌 HTML 요소의 내용 만큼만 차지</p>
+                <div class="t_code">
+<pre ><code class="language-js">{
     &lt;!DOCTYPE html&gt;
     &lt;html lang="ko"&gt;
         &lt;head&gt;
@@ -190,31 +202,32 @@
         &lt;/body&gt;
     &lt;/html&gt;
 }
-            </code></pre>
-            <p>&lt;strong&gt;,&lt;span&gt; 요소들은 인라인 성질을 지니고 있어 행이 안바뀌고 한줄 출력 됨</p>
-            <!-- 시멘틱 마크업 종료 -->
-            <!-- 테이블 -->
-            <article class="article">
-                <table class="table">
-                    <thead>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <th class="center">요소 유형</th>
-                            <th class="center">특징</th>
-                        </tr>
-                        <tr>
-                            <td class="center">블록 레벨<br>요소</td>
-                            <td>1. 줄바꿈 있음<br>2.텍스트와 인라인요소만 자식 요소로 포함 가능<br>3.블록레벨요소를 자식 요소로 포함할 수 있는 요소와 아닌 요소가 있다.</td>
-                        </tr>
-                        <tr>
-                            <td class="center">인라인 요소</td>
-                            <td>1. 줄바꿈이 일어나지 않음<br>2. 텍스트와 인라인 요소를 자식 요소로 포함 가능<br>3.블록레벨요소를 자식 요소로 포함 못함</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </article>
-            <!-- 테이블 끝-->
+</code></pre>
+                </div>
+                <p class="t_box">&lt;strong&gt;,&lt;span&gt; 요소들은 인라인 성질을 지니고 있어 행이 안바뀌고 한줄 출력 됨</p>
+                <!-- 테이블 -->
+                <article class="article">
+                    <table class="t_table">
+                        <thead>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th class="center">요소 유형</th>
+                                <th class="center">특징</th>
+                            </tr>
+                            <tr>
+                                <td class="center">블록 레벨<br>요소</td>
+                                <td>1. 줄바꿈 있음<br>2.텍스트와 인라인요소만 자식 요소로 포함 가능<br>3.블록레벨요소를 자식 요소로 포함할 수 있는 요소와 아닌 요소가 있다.</td>
+                            </tr>
+                            <tr>
+                                <td class="center">인라인 요소</td>
+                                <td>1. 줄바꿈이 일어나지 않음<br>2. 텍스트와 인라인 요소를 자식 요소로 포함 가능<br>3.블록레벨요소를 자식 요소로 포함 못함</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </article>
+                <!-- 테이블 끝-->
+            </div>
         </article>
     </section>
     <script>hljs.highlightAll();</script>
