--- a/javascript/study/function.html
+++ b/javascript/study/function.html
@@ -48,7 +48,7 @@
             <!-- 01번 메인 샘플 시작 -->
                 <div id="sample01" class="sample">
                     <h3 class="t_tit2">01. 선언적 함수</h3>
-                    <p>
+                    <p class="t_desc2">
                         '선언적 함수'는 함수를 호출할 때 함수의 앞 또는 뒤에서 호출 가능합니다.
                     </p>
                     <div class="script">
@@ -68,7 +68,7 @@
                         <details>
                             <summary>결과보기</summary>
                             <div class="sample01_result">
-                                1번. 함수가 실행되었습니다.
+                                <p class="t_box">1번. 함수가 실행되었습니다.</p>1번. 함수가 실행되었습니다.
                             </div>
                         </details>
                         <!-- 결과보기 끝 -->
@@ -79,7 +79,7 @@
             <!-- 02번 메인 샘플 시작 -->
                 <div id="sample01" class="sample">
                     <h3 class="t_tit2">02. 익명함수</h3>
-                    <p>
+                    <p class="t_desc2">
                         익명 함수는 변수에 함수 데이터를 저장하여 변수를 마치 함수처럼 사용 할 수 있도록 만들어 줍니다.
                     </p>
                     <div class="script">
@@ -99,7 +99,7 @@
                         <details>
                             <summary>결과보기</summary>
                             <div class="sample02_result">
-                                2번. 함수가 실행되었습니다.
+                                <p class="t_box">2번. 함수가 실행되었습니다.</p>
                             </div>
                         </details>
                         <!-- 결과보기 끝 -->
@@ -110,7 +110,7 @@
             <!-- 03번 메인 샘플 시작 -->
                 <div id="sample01" class="sample">
                     <h3 class="t_tit2">03. 매개변수함수</h3>
-                    <p>
+                    <p class="t_desc2">
                         함수를 호출할 때 전달하는 변수를 매개변수라고 하며, return을 이용해 함수의 처리된 결과를 반환시켜 출력시킵니다.
                     </p>
                     <div class="script">
@@ -130,7 +130,7 @@
                         <details>
                             <summary>결과보기</summary>
                             <div class="sample03_result">
-                                3번. 함수가 실행되었습니다.
+                                <p class="t_box">3번. 함수가 실행되었습니다.</p>
                             </div>
                         </details>
                         <!-- 결과보기 끝 -->
@@ -141,7 +141,7 @@
             <!-- 04번 메인 샘플 시작 -->
                 <div id="sample01" class="sample">
                     <h3 class="t_tit2">04. 리턴값 함수</h3>
-                    <p>
+                    <p class="t_desc2">
                         각 나이에 맞춰 요금을 구합니다.
                     </p>
                     <div class="script">
@@ -162,7 +162,7 @@
                         <details>
                             <summary>결과보기</summary>
                             <div class="sample03_result">
-                                4번. 함수가 실행되었습니다.
+                                <p class="t_box">4번. 함수가 실행되었습니다.</p>
                             </div>
                         </details>
                         <!-- 결과보기 끝 -->
@@ -173,7 +173,7 @@
             <!-- 05번 메인 샘플 시작 -->
                 <div id="sample01" class="sample">
                     <h3 class="t_tit2">05.선언적 함수 : 화살표</h3>
-                    <p>
+                    <p class="t_desc2">
                         화살표 함수는 function키워드를 생략하고 '='와'>'을 합쳐 코딩하며 항상 익명 함수 형식으로 표현합니다.
                     </p>
                     <div class="script">
@@ -191,7 +191,7 @@
                         <details>
                             <summary>결과보기</summary>
                             <div class="sample03_result">
-                                5번. 함수가 실행되었습니다.
+                                <p class="t_box">5번. 함수가 실행되었습니다.</p>
                             </div>
                         </details>
                         <!-- 결과보기 끝 -->
@@ -202,7 +202,7 @@
             <!-- 06번 메인 샘플 시작 -->
                 <div id="sample01" class="sample">
                     <h3 class="t_tit2">06. 익명함수 : 화살표</h3>
-                    <p>
+                    <p class="t_desc2">
                         화살표 함수는 function키워드를 생략하고 '='와'>'을 합쳐 코딩하며 항상 익명 함수 형식으로 표현합니다.
                     </p>
                     <div class="script">
@@ -220,7 +220,7 @@
                         <details>
                             <summary>결과보기</summary>
                             <div class="sample03_result">
-                                6번. 함수가 실행되었습니다.
+                                <p class="t_box">6번. 함수가 실행되었습니다.</p>
                             </div>
                         </details>
                         <!-- 결과보기 끝 -->
@@ -231,7 +231,7 @@
             <!-- 07번 메인 샘플 시작 -->
                 <div id="sample01" class="sample">
                     <h3 class="t_tit2">07. 매개변수 : 화살표</h3>
-                    <p>
+                    <p class="t_desc2">
                         화살표 함수는 function키워드를 생략하고 '='와'>'을 합쳐 코딩하며 항상 익명 함수 형식으로 표현합니다.
                     </p>
                     <div class="script">
@@ -249,7 +249,7 @@
                         <details>
                             <summary>결과보기</summary>
                             <div class="sample03_result">
-                                7번. 함수가 실행되었습니다.
+                                <p class="t_box">7번. 함수가 실행되었습니다.</p>
                             </div>
                         </details>
                         <!-- 결과보기 끝 -->
@@ -260,7 +260,7 @@
             <!-- 08번 메인 샘플 시작 -->
                 <div id="sample01" class="sample">
                     <h3 class="t_tit2">08. 리턴값 함수 : 화살표</h3>
-                    <p>
+                    <p class="t_desc2">
                         화살표 함수는 function키워드를 생략하고 '='와'>'을 합쳐 코딩하며 항상 익명 함수 형식으로 표현합니다.
                     </p>
                     <div class="script">
@@ -281,7 +281,7 @@
                         <details>
                             <summary>결과보기</summary>
                             <div class="sample03_result">
-                                8번. 함수가 실행되었습니다.
+                                <p class="t_box">8번. 함수가 실행되었습니다.</p>
                             </div>
                         </details>
                         <!-- 결과보기 끝 -->
