--- a/javascript/index.html
+++ b/javascript/index.html
@@ -533,7 +533,7 @@
 
         </div>
         <!-- 강아지 끝 -->
-        <h1>JavaScript</h1>
+        <h1>Javascript</h1>
         <nav>
             <ul>
                 <li><a href="javascript01.html">데이터 저장하기</a></li>
