--- a/javascript/javascript03.html
+++ b/javascript/javascript03.html
@@ -216,7 +216,7 @@
             <div id="sample01" class="sample">
                 <h3>05. 화살표 함수 : 선언적 함수</h3>
                 <p>
-                    기본 함수 표현을 좀 더 간단하게 표현 해줄 수 있는 함수이다.
+                    기본 함수 표현을 화살표를 통해서 좀 더 간단하게 표현 해줄 수 있는 방법입니다.
                 </p>
                 <div class="script">
             <!-- 3. 하단의 클래스를 통해 스크립트(js) 적용 -->
@@ -245,6 +245,9 @@
         <div class="main_sample">
             <div id="sample01" class="sample">
                 <h3>06. 화살표 함수 : 익명 함수</h3>
+                <p>
+                    기본 함수 표현을 화살표를 통해서 좀 더 간단하게 표현 해줄 수 있는 방법입니다.
+                </p>
                 <div class="script">
             <!-- 3. 하단의 클래스를 통해 스크립트(js) 적용 -->
 <pre><code class="language-js">{
@@ -282,6 +285,9 @@
         <div class="main_sample">
             <div id="sample01" class="sample">
                 <h3>07. 화살표 함수 : 매개변수 함수</h3>
+                <p>
+                    기본 함수 표현을 화살표를 통해서 좀 더 간단하게 표현 해줄 수 있는 방법입니다.
+                </p>
                 <div class="script">
             <!-- 3. 하단의 클래스를 통해 스크립트(js) 적용 -->
             <div class="t_code"></div>
@@ -319,6 +325,9 @@
         <div class="main_sample">
             <div id="sample01" class="sample">
                 <h3>08. 화살표 함수 : 리턴값 함수</h3>
+                <p>
+                    기본 함수 표현을 화살표를 통해서 좀 더 간단하게 표현 해줄 수 있는 방법입니다.
+                </p>
                 <div class="script">
             <!-- 3. 하단의 클래스를 통해 스크립트(js) 적용 -->
 <pre><code class="language-js">{
@@ -354,6 +363,9 @@
         <div class="main_sample">
             <div id="sample01" class="sample">
                 <h3>09. 화살표 함수 : 익명함수 + 매개변수 + 리턴값 </h3>
+                <p>
+                    기본 함수 표현을 화살표를 통해서 좀 더 간단하게 표현 해줄 수 있는 방법입니다.
+                </p>
                 <div class="script">
             <!-- 3. 하단의 클래스를 통해 스크립트(js) 적용 -->
 <pre><code class="language-js">{
@@ -382,6 +394,9 @@
         <div class="main_sample">
             <div id="sample01" class="sample">
                 <h3>09. 화살표 함수 : 익명함수 + 매개변수 + 리턴값 </h3>
+                <p>
+                    기본 함수 표현을 화살표를 통해서 좀 더 간단하게 표현 해줄 수 있는 방법입니다.
+                </p>
                 <div class="script">
             <!-- 3. 하단의 클래스를 통해 스크립트(js) 적용 -->
 <pre><code class="language-js">{
@@ -410,6 +425,9 @@
         <div class="main_sample">
             <div id="sample01" class="sample">
                 <h3>10. 화살표 함수 : 익명함수 + 매개변수 + 리턴값 </h3>
+                <p>
+                    기본 함수 표현을 화살표를 통해서 좀 더 간단하게 표현 해줄 수 있는 방법입니다.
+                </p>
                 <div class="script">
             <!-- 3. 하단의 클래스를 통해 스크립트(js) 적용 -->
 <pre><code class="language-js">{
@@ -438,6 +456,9 @@
         <div class="main_sample">
             <div id="sample01" class="sample">
                 <h3>11. 화살표 함수 : 익명함수 + 매개변수 + 리턴값 + 괄호 생략 + 리턴 생략 </h3>
+                <p>
+                    기본 함수 표현을 화살표를 통해서 좀 더 간단하게 표현 해줄 수 있는 방법입니다.
+                </p>
                 <div class="script">
             <!-- 3. 하단의 클래스를 통해 스크립트(js) 적용 -->
 <pre><code class="language-js">{
@@ -466,6 +487,9 @@
         <div class="main_sample">
             <div id="sample01" class="sample">
                 <h3>12. 화살표 함수 : 익명함수 + 매개변수 + 리턴값 + 괄호 생략 + 리턴 생략</h3>
+                <p>
+                    기본 함수 표현을 화살표를 통해서 좀 더 간단하게 표현 해줄 수 있는 방법입니다.
+                </p>
                 <div class="script">
             <!-- 3. 하단의 클래스를 통해 스크립트(js) 적용 -->
 <pre><code class="language-js">{
