--- a/javascript/javascript04.html
+++ b/javascript/javascript04.html
@@ -439,7 +439,7 @@ switch(num){
             <div id="sample01" class="sample">
                 <h3>11. break문</h3>
                 <p>
-                    예로 조건에 충족해 break를 만나게 되면 조건 계산식에서 빠져나옵니다.
+                    break는 멈추는 뜻 그 자체로 함수 작성시 포함하게 되면 <br>예를들어 조건에 충족해 break를 만나게 되면 조건 계산식에서 빠져나옵니다.
                 </p>
                 <div class="script">
             <!-- 3. 하단의 클래스를 통해 스크립트(js) 적용 -->
@@ -473,7 +473,7 @@ switch(num){
             <div id="sample01" class="sample">
                 <h3>12. continue문</h3>
                 <p>
-                    예로 조건에 충족해 continue를 만나게 되면 해당 조건을 충족한 값은 건너뛰고 다음 조건 검사를 실행합니다. 
+                    continue는 계속하다라는 뜻 그 자체로 함수 작성시 포함하게 되면 <br>예를들어 조건에 충족해 continue를 만나게 되면 해당 조건을 충족한 값은 건너뛰고 다음 조건 검사를 실행합니다. 
                 </p>
                 <div class="script">
             <!-- 3. 하단의 클래스를 통해 스크립트(js) 적용 -->
