--- a/html/layout01.html
+++ b/html/layout01.html
@@ -134,10 +134,11 @@ body{
     }
 }
         </code></pre>
+                <div class="t_box"> float을 사용하게 되면 구조가 깨지는 버그가 발생합니다. 그래서 clear:both라는 것을 사용해서 푸터를 표현하였습니다.   </div>
                 </div>
                 <h4 class="t_tit2">결과 (HTML + CSS)</h4>
                 <div class="t_iframe">
-                    <iframe height="300" style="width: 100%;" scrolling="no" title="layout01_float" src="https://codepen.io/kimsangjunv1/embed/KKovjZP?default-tab=html%2Cresult" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+                    <iframe height="500px" style="width: 100%;" scrolling="no" title="layout01_float" src="https://codepen.io/kimsangjunv1/embed/KKovjZP?default-tab=html%2Cresult" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
                         See the Pen <a href="https://codepen.io/kimsangjunv1/pen/KKovjZP">
                         layout01_float</a> by kimsangjunv1 (<a href="https://codepen.io/kimsangjunv1">@kimsangjunv1</a>)
                         on <a href="https://codepen.io">CodePen</a>.
@@ -234,7 +235,7 @@ body{
                 </div>
                 <h4 class="t_tit2">결과 (HTML + CSS)</h4>
                 <div class="t_iframe">
-                    <iframe height="300" style="width: 100%;" scrolling="no" title="layout01_grid" src="https://codepen.io/kimsangjunv1/embed/gOexNXd?default-tab=html%2Cresult" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+                    <iframe height="500px" style="width: 100%;" scrolling="no" title="layout01_grid" src="https://codepen.io/kimsangjunv1/embed/gOexNXd?default-tab=html%2Cresult" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
                         See the Pen <a href="https://codepen.io/kimsangjunv1/pen/gOexNXd">
                         layout01_grid</a> by kimsangjunv1 (<a href="https://codepen.io/kimsangjunv1">@kimsangjunv1</a>)
                         on <a href="https://codepen.io">CodePen</a>.
@@ -321,7 +322,7 @@ body {
                 </div>
                 <h4 class="t_tit2">결과 (HTML + CSS)</h4>
                 <div class="t_iframe">
-                    <iframe height="300" style="width: 100%;" scrolling="no" title="layout01_flex" src="https://codepen.io/kimsangjunv1/embed/qBoXzpj?default-tab=html%2Cresult" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+                    <iframe height="500px" style="width: 100%;" scrolling="no" title="layout01_flex" src="https://codepen.io/kimsangjunv1/embed/qBoXzpj?default-tab=html%2Cresult" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
                         See the Pen <a href="https://codepen.io/kimsangjunv1/pen/qBoXzpj">
                         layout01_flex</a> by kimsangjunv1 (<a href="https://codepen.io/kimsangjunv1">@kimsangjunv1</a>)
                         on <a href="https://codepen.io">CodePen</a>.
