--- a/javascript/study/for.html
+++ b/javascript/study/for.html
@@ -153,7 +153,7 @@
                 <div class="script">
                     <div class="t_code">
 <pre><code class="language-js">{
-    or(let i=1; i&lt;=100; i++){
+    for(let i=1; i&lt;=100; i++){
     if(i % 5 == 0){
         document.write(i,"<br>");
         }
@@ -254,7 +254,8 @@
                 <!-- 3. 하단의 클래스를 통해 스크립트(js) 적용 -->
                 <div class="script">
                     <div class="t_code">
-<pre><code class="language-js">let table = "&lt;table class='testTable'&gt;"
+<pre><code class="language-js">{
+    let table = "&lt;table class='testTable'&gt;"
     let s = 0;
         
         for(let q=1; q&lt;=10; q++){//q를 10번 반복해
