--- a/html/layout03.html
+++ b/html/layout03.html
@@ -48,7 +48,7 @@
                 <!-- 1번 -->
                 <div>
                     <div>
-                        <h2 class="t_tit">레이아웃01</h2>
+                        <h2 class="t_tit">레이아웃03</h2>
                         <p class="t_desc">
                             이번 레이아웃은 <i>전체 영역이 들어간 구조</i>이며, 실제 사이트에서 이런 구조를 많이 사용하며,<br>
                             컨테이너를 만들어서 가운데 영역을 설정합니다.
@@ -63,7 +63,11 @@
 
                         <h3 class="t_tit2">float을 이용한 레이아웃</h3>
                         <p class="t_desc2">
-                            float 속성을 사용해 박스를 왼쪽(left) 또는 오른쪽(right)으로 "부유"시키는 레이아웃 기법 입니다
+                            float 속성을 사용해 박스를 왼쪽(left) 또는 오른쪽(right)으로 "부유"시키는 레이아웃 기법 입니다,
+                        </p>
+                        <p class="t_box">
+                            다만 float를 사용할때는 레이아웃이 깨지는 경우가 생기는데 이럴때는 깨지는 영역에 clear:both를 사용하면 되며,
+                            좀 더 올바른 방법으로는 clearfix를 사용해 해결하는 방법이 주로 사용되곤 합니다.
                         </p>
                     </div>
                     <div class="t_code">
@@ -143,7 +147,7 @@
                     </div>
                     <h4 class="t_tit2">결과 (HTML + CSS)</h4>
                     <div class="t_iframe">
-                        <iframe height="300" style="width: 100%;" scrolling="no" title="layout03_float"
+                        <iframe height="500px" style="width: 100%;" scrolling="no" title="layout03_float"
                             src="https://codepen.io/kimsangjunv1/embed/yLKodoL?default-tab=html%2Cresult"
                             frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
                             See the Pen <a href="https://codepen.io/kimsangjunv1/pen/yLKodoL">
@@ -243,7 +247,7 @@
                     </div>
                     <h4 class="t_tit2">결과 (HTML + CSS)</h4>
                     <div class="t_iframe">
-                        <iframe height="300" style="width: 100%;" scrolling="no" title="layout03_grid"
+                        <iframe height="500px" style="width: 100%;" scrolling="no" title="layout03_grid"
                             src="https://codepen.io/kimsangjunv1/embed/BardgdG?default-tab=html%2Cresult"
                             frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
                             See the Pen <a href="https://codepen.io/kimsangjunv1/pen/BardgdG">
@@ -334,7 +338,7 @@
                     </div>
                     <h4 class="t_tit2">결과 (HTML + CSS)</h4>
                     <div class="t_iframe">
-                        <iframe height="300" style="width: 100%;" scrolling="no" title="layout03_flex"
+                        <iframe height="500px" style="width: 100%;" scrolling="no" title="layout03_flex"
                             src="https://codepen.io/kimsangjunv1/embed/MWVvMEY?default-tab=html%2Cresult"
                             frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
                             See the Pen <a href="https://codepen.io/kimsangjunv1/pen/MWVvMEY">
