--- a/javascript/study/element.html
+++ b/javascript/study/element.html
@@ -45,206 +45,131 @@
     <main id="main">
         <div class="document">
             <h2 class="t_tit">요소 선택</h2>
-            <!--블록-->
-            <p class="t_desc">
-                <!--블록-->
-                변수는 함수 블록을 기준으로 선언 위치에 따라 '전역 변수','지역 변수'로 나뉩니다.
-            </p>
-            <p class="t_box">'전역 변수'는 <i>함수 블록{} 밖이나 안에서 자유롭게 사용 가능</i>하지만 <br>
-                <i>'지역 변수'는 함수 블록{} 내에서만 사용 가능</i>합니다.</p>
-            <p class="t_box">'전역 변수'는 <i>{}블록 밖까지 영향을 미치며,</i><br>
-                '지역 변수'는 <i>{}블록 안에서만 영향을 미칩니다.</i></p>
-
-            <hr>
             <h2 class="t_tit2">요소를 직접 선택하는 메서드</h2>
             <table class="t_table">
                 <thead>
                     <tr>
-                        <th class="ce">전역 변수</th>
-                        <th class="ce">지역 변수</th>
+                        <th class="ce">메서드</th>
+                        <th class="ce">설명</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
                         <td>
-                            var변수:<br>
-                            &nbsp;&nbsp;&nbsp;&nbsp;function 함수(){<br>
-
-                            }
+                            getElementById()
                         </td>
                         <td>
-                            function 함수() {<br>
-                            &nbsp;&nbsp;&nbsp;&nbsp;var 변수:<br>
-                            }
+                            document.getElementByid('content')일 경우 HTML 요소 중 id 속성이 'content'인 요소를 선택합니다.
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            getElementsByClassName()
+                        </td>
+                        <td>
+                            document.getElementsByClassName('menu')일 경우 HTML 요소 중 class 명이 'menu'인 요소들을 선택합니다.
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            getElementsByTagName()
+                        </td>
+                        <td>
+                            document.getElementsByTagName('ul')일 경우 HTML 요소 중 태그명이 'ul'인 요소들을 선택합니다.
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            getElementsByName()
+                        </td>
+                        <td>
+                            document.getElementsByName('txt')일 경우 HTML 요소 중 name명이 'txt'인 요소들을 선택합니다.
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            querySelector()
+                        </td>
+                        <td>
+                            요소의 선택 방법이 css 선택 방법과 같습니다. 선택된 요소 중 첫 번째 요소만 선택합니다.<br>
+                            document.querySelector('.lnb')<br>
+                            document.querySelector(div)<br>
+                            document.querySelector('#gnb li')
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            querySelectorAll()
+                        </td>
+                        <td>
+                            querySelector()는 선택된 요소 중 첫 번째 요소만 선택하는 반면 querySelectorAll()은 모든 요소를 선택합니다.
                         </td>
                     </tr>
                 </tbody>
             </table>
             <hr>
 
-            <!-- 01번 메인 샘플 시작 -->
-            <div id="sample01" class="sample">
-                <h2 class="t_tit2">"전역" 변수 예시</h2>
-                <p class="t_desc2">
-                    위와같이 안 또는 밖에서 사용합니다.
-                </p>
+            <!-- 06번 메인 샘플 시작 -->
+            <div id="sample06" class="sample">
+                <h3 class="t_tit2">활용예시</h3>
+                <!-- 3. 하단의 클래스를 통해 스크립트(js) 적용 -->
                 <div class="script">
-                    <!-- 3. 하단의 클래스를 통해 스크립트(js) 적용 -->
                     <div class="t_code">
-                        <pre><code class="language-js">{
-    var kor = 90; //밖에서 전역변수 사용
-    function getScore(){
-        kor=100; //안에서 전역변수 사용
-        document.write(kor);
-    }
-    document.write(kor);
-}
+<pre><code class="language-js">&lt;!DOCTYPE html&gt;
+&lt;html lang="ko"&gt;
+&lt;head&gt;
+    &lt;meta charset="UTF-8"&gt;
+    &lt;title&gt;요소를 직접 선택하는 메서드&lt;/title&gt;
+    &lt;script&gt;
+        window.onload = function() {
+            var list1 = document.querySelector('#box1 &gt; ul &gt; li');
+            var list2 = document.querySelectorAll('#box2 &gt; ul &gt; li');
+            console.log(list1);
+            console.log(list2);
+            // list1.style.background = "#ff6600";
+            // list2[0].style.background = "#ccc";
+            // list2.item(1).style.background = "#ddd";
+        };
+    &lt;/script&gt;
+&lt;/head&gt;
+&lt;body&gt;
+    &lt;div id="box1"&gt;
+        &lt;ul&gt;
+            &lt;li&gt;내용1&lt;/li&gt;
+            &lt;li&gt;내용2&lt;/li&gt;
+            &lt;li&gt;내용3&lt;/li&gt;
+        &lt;/ul&gt;
+    &lt;/div&gt;
+    &lt;div id="box2"&gt;
+    &lt;ul&gt;
+            &lt;li&gt;내용4&lt;/li&gt;
+            &lt;li&gt;내용5&lt;/li&gt;
+            &lt;li&gt;내용6&lt;/li&gt;
+        &lt;/ul&gt;
+    &lt;/div&gt;
+&lt;/body&gt;
+&lt;/html&gt;
 </code></pre>
                     </div>
                 </div>
+                <!-- 결과보기 -->
                 <div class="result">
-                    <!-- 결과보기 -->
                     <details>
                         <summary>결과보기</summary>
-                        <div class="result02">
-                            <p class="t_box">100</p>
+                        <div class="t_box">
+                            • 내용1<br>
+                            • 내용2<br>
+                            • 내용3<br>
+                            <br>
+                            • 내용4<br>
+                            • 내용5<br>
+                            • 내용6
                         </div>
                     </details>
-                    <!-- 결과보기 끝 -->
                 </div>
+                <!-- 결과보기 끝 -->
             </div>
-            <!-- 01번 메인 샘플 끝 -->
-
-            <!-- 02번 메인 샘플 시작 -->
-            <div id="sample01" class="sample">
-                <h2 class="t_tit2">"지역" 변수 예시</h2>
-                <p class="t_desc2">
-                    위와같이 지역 변수는 {} 블록 내부에서만 사용 가능합니다.
-                </p>
-                <div class="script">
-                    <!-- 3. 하단의 클래스를 통해 스크립트(js) 적용 -->
-                    <div class="t_code">
-                        <pre><code class="language-js">{
-    var kor = 90;
-    function getScore(){
-        var kor=100; //지역변수
-        // console.log(kor);//100
-        document.write(kor);
-    }
-    document.write(kor);
-}
-</code></pre>
-                    </div>
-                </div>
-                <div class="result">
-                    <p class="t_desc2">
-                        {}함수블록안에 지역변수는 반드시 var로 선언해 주어야 합니다
-                    </p>
-                    <!-- 결과보기 -->
-                    <details>
-                        <summary>결과보기</summary>
-                        <div class="sample06_result">
-                            <p class="t_box">90</p>
-                        </div>
-                    </details>
-                    <!-- 결과보기 끝 -->
-                </div>
-            </div>
-            <!-- 02번 메인 샘플 끝 -->
-
-            <!-- 03번 메인 샘플 시작 -->
-            <div id="sample01" class="sample">
-                <h2 class="t_tit2">함수 / 블록 레벨 스코프</h2>
-                <p class="t_desc2">
-                    var는 함수 {} 내부에서만 지역 변수가 존재하고 일반{}이나 제어문{}에서는 지역변수가 존재하지 않습니다.
-                </p>
-                <div class="script">
-                    <!-- 3. 하단의 클래스를 통해 스크립트(js) 적용 -->
-                    <div class="t_code">
-<pre><code class="language-js">{
-    var x = 10;
-    let y = 10;
-    const z = 10;
-    {
-        var x = 20; //전역 변수
-        let y = 30; //지역 변수
-        const z = 40; //지역 변수
-    }
-    document.write(x); //전역 변수로써 먼저 선언된 값 20 출력
-    document.write(y); //지역 변수로써 먼저 선언된 값 10 출력
-    document.write(z); //지역 변수로써 먼저 선언된 값 10 출력
-}
-</code></pre>
-                    </div>
-                </div>
-                <div class="result">
-                    <!-- 결과보기 -->
-                    <details>
-                        <summary>결과보기</summary>
-                        <div class="sample03_result">
-                            <p class="t_box">201010</p>
-                        </div>
-                    </details>
-                    <!-- 결과보기 끝 -->
-                </div>
-            </div>
-            <!-- 03번 메인 샘플 끝 -->
-
-            <!-- 04번 메인 샘플 시작 -->
-            <div id="sample01" class="sample">
-                <h2 class="t_tit2">함수 / 블록 레벨 스코프</h2>
-                <p class="t_desc2">
-                    var는 함수 {} 내부에서만 지역 변수가 존재하고 일반{}이나 제어문{}에서는 지역변수가 존재하지 않습니다.
-                </p>
-                <div class="script">
-                    <!-- 3. 하단의 클래스를 통해 스크립트(js) 적용 -->
-                    <div class="t_code">
-<pre><code class="language-js">{
-    //함수의 전역변수
-    var sum1 = 10;  //전역 변수 sum1 생성 값 10 
-    function add1(){  //add1 함수 생성
-        sum1=20;  //전역변수 sum1은 20으로 설정
-    }
-    add1();  //add1 출력 
-    document.write("전역"+sum1);
-
-    //함수의 지역변수
-    var sum2 = 30;
-    function add2() {
-        var sum2 = 40
-        document.write("지역"+sum2);
-    }
-    add2();
-    document.write('전역'+sum2);
-
-    //불록의 지역변수
-    var num1 = 50;
-    if (num1 === 50){
-        var num1 = 60;
-    }
-    document.write("전역"+num1);
-    let num2 = 70;
-    if(num2===70){
-        let num2 = 80;
-        document.write("지역"+num2);
-    }
-    document.write("전역"+num2)
-}
-</code></pre>
-                    </div>
-                </div>
-                <div class="result">
-                    <!-- 결과보기 -->
-                    <details>
-                        <summary>결과보기</summary>
-                        <div class="sample03_result">
-                            <p class="t_box">전역20지역40전역30전역60지역80전역70</p>
-                        </div>
-                    </details>
-                    <!-- 결과보기 끝 -->
-                </div>
-            </div>
-            <!-- 03번 메인 샘플 끝 -->
+            <!-- 06번 메인 샘플 끝 -->
 
         </div>
     </main>
