--- a/html/basic.html
+++ b/html/basic.html
@@ -231,7 +231,7 @@
         .document .t_table .ce {
             text-align: center;
         }
-        표 끝
+        /* 표 끝 */
         
         /* 미디어 쿼리 */
         @media (max-width: 800px){
@@ -259,7 +259,7 @@
             <ul>
                 <li><a href="#">기초</a></li>
                 <li><a href="#">주제</a></li>
-                <li><a href="#">알파벳</a></li>
+                <li><a href="basic.html">알파벳</a></li>
             </ul>
         </nav>
     </header>
