--- a/javascript/effect/quizEffect02.html
+++ b/javascript/effect/quizEffect02.html
@@ -92,7 +92,7 @@
 
         //문제 출력
         quizType.textContent=answerType;                            //answerType의 텍스트만 인식해 출력
-        quizNumber.textContent=answerNumber + ". ";                 //answerNumber의 텍스트만 인식해 출력
+        quizNumber.textContent=answerNumber;                 //answerNumber의 텍스트만 인식해 출력
         quizAsk.textContent=answerAsk;                              //answerAsk의 텍스트만 인식해 출력
         quizResult.textContent="정답은 : "+answerResult+" 입니다.";    //answerResult의 텍스트만 인식해 출력
 
